--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ant-design-pro": "^2.3.2",
     "antd": "^4.16.13",
     "jsonfile": "^6.1.0",
     "jwt-decode": "^3.1.2",
