--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rc-tween-one": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
