--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonfile": "^6.1.0",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
+    "numeral": "^2.0.6",
     "rc-tween-one": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
