wip for json deletion, currently body is returning empty

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "frontend": "cd frontend && npm start",
-    "backend": "cd backend && nodemon -L server.js",
+    "backend": "nodemon -L server.js",
     "start": "concurrently -n 'backend,frontend' -c 'blue,green' \"npm run backend\" \"npm run frontend\""
   },
   "repository": {
