--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-tooltip": "^4.2.21",
     "sunflower-antd": "^1.0.0-beta.3",
     "tailwind": "^4.0.0",
+    "underscore": "^1.13.1",
     "web-vitals": "^1.1.2"
   },
   "main": "index.js",
