--- a/frontend/src/data/approval.json
+++ b/frontend/src/data/approval.json
@@ -1,9 +1,9 @@
 [
   {
-    "key":0,
-    "sender":"Joey Chua",
-    "receiver":"Belle Sim",
-    "gifttype":"Morning Greetings"
+    "key": 0,
+    "sender": "Joey Lim",
+    "receiver": "Belle Sim",
+    "gifttype": "Morning Greetings"
   },
   {
     "key":1,
