--- a/frontend/src/data/approval.json
+++ b/frontend/src/data/approval.json
@@ -1,1 +1,1 @@
-[{"key":2,"sender":"Junkiat","receiver":"Jackson Wong","gifttype":"Woozy Wednesday"},{"key":4,"sender":"Jackson Wong","receiver":"Jinyoung","gifttype":"Morning Greetings"}]
+[{"key":2,"sender":"Junkiat","receiver":"Jackson Wong","gifttype":"Woozy Wednesday"},{"key":3,"sender":"Mark Tuan","receiver":"Bambam","gifttype":"Monday Blues"},{"key":4,"sender":"Jackson Wong","receiver":"Jinyoung","gifttype":"Morning Greetings"}]
