--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "ant-design-pro": "^2.3.2",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "jsonfile": "^6.1.0",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
