--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^12.8.3",
     "ant-design-pro": "^2.3.2",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "jsonfile": "^6.1.0",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "rc-tween-one": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
