need to debug controller approval.js double running
double counting writing to inventory.json as code reloads after updating json file.

--- a/frontend/src/data/approval.json
+++ b/frontend/src/data/approval.json
@@ -1,1 +1,1 @@
-[{"key":2,"sender":"Junkiat","receiver":"Jackson Wong","gifttype":"Woozy Wednesday"},{"key":4,"sender":"Jackson Wong","receiver":"Jinyoung","gifttype":"Morning Greetings"}]
+[{"key":0,"sender":"Junkiat","receiver":"Jackson Wong","gifttype":"Woozy Wednesday"},{"key":1,"sender":"Jackson Wong","receiver":"Jinyoung","gifttype":"Morning Greetings"},{"key":2,"sender":"Jackson Wong","receiver":"Jinyoung","gifttype":"Morning Greetings"},{"key":3,"sender":"Jackson Wong","receiver":"Jinyoung","gifttype":"Morning Greetings"}]
